apollo/apollo-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apollo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apollo
  template:
    metadata:
      labels:
        app: apollo
    spec:
      containers:
      
      - name: mysql
        image: mysql:5.7-debian
        
        ports:
        - containerPort: 3306

        volumeMounts:
        - name: mysql-restore
          mountPath: /var/lib/mysql
          subPath: mysql
          
        - name: mysql-config
          mountPath: /etc/mysql/mysql.cnf
          subPath: mysql.cnf

        - name: backups
          mountPath: /backups


      - name: redmine
        image: asofainy/redmine:ci
        imagePullPolicy: Always        

        ports:
        - containerPort: 3000

        securityContext:
          privileged: true 

        volumeMounts:
        - name: redmine-config
          mountPath: /usr/src/redmine/config/configuration.yml
          subPath: configuration.yml
        - name: redmine-config
          mountPath: /usr/src/redmine/config/database.yml
          subPath: database.yml
        - name: redmine-config
          mountPath: /usr/src/redmine/config/settings.yml
          subPath: settings.yml
        - name: redmine-config
          mountPath: /usr/src/redmine/config/application.rb
          subPath: application.rb
        - name: redmine-config
          mountPath: /config/env.yml
          subPath: env.yml
        - name: redmine-config
          mountPath: /etc/ImageMagick-6/policy.xml
          subPath: policy.xml
# A Verifier si le pod ne demarre pas
        - name: redmine-files
          mountPath: /usr/src/redmine/files
          subPath: files
        - name: redmine-files
          mountPath: /usr/src/redmine/file_index
          subPath: file_index
        - name: redmine-repo
          mountPath: /repositories
        - name: library
          mountPath: /library
        - name: mysql-config
          mountPath: /mnt/etc/mysql
        - name: mysql-restore
          mountPath: /mnt/var/lib/mysql
        - name: backups
          mountPath: /backups

      - name: calibre-web
        image: debian:11.5
        imagePullPolicy: IfNotPresent
        command: ["/bin/bash","-c"]
        args: 
          - apt-get -qqq update && apt-get -qqq  install -y git | sed -u "s/.*/` printf "calibre-web  |" ` &/" ;
            git clone -b build --progress https://${GITHUB_TOKEN}@github.com/asofainy/calibre-web.git /tmp/calibre-web | sed -u "s/.*/` printf "calibre-web  |" ` &/" ;
            chmod -R +x /tmp/calibre-web/run/install.sh && /tmp/calibre-web/run/install.sh | sed -u "s/.*/` printf "calibre-web  |" ` &/" ;         

        ports:
        - containerPort: 8083
        
        volumeMounts:
        - name: library
          mountPath: /library
        - name: calibre-data
          mountPath: /opt

      volumes:
        - name: redmine-repo
          persistentVolumeClaim:
            claimName: redmine-repo-pvc
        - name: library
          persistentVolumeClaim:
            claimName: library-pvc
        - name: redmine-config
          configMap:
            name: redmine-config
        - name: redmine-files
          persistentVolumeClaim:
            claimName: redmine-files-pvc
        - name: calibre-data
          persistentVolumeClaim:
            claimName: calibre-data-pvc
        - name: calibre-web-data
          persistentVolumeClaim:
            claimName: calibre-web-data-pvc
        - name: mysql-restore
          persistentVolumeClaim:
            claimName: mysql-restore-pvc     
        - name: mysql-config
          configMap:
            name: mysql-config
        - name: backups
          persistentVolumeClaim:
            claimName: backups-pvc
