apollo/apollo-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: apollo-loadbalancer
spec:
  type: LoadBalancer
  loadBalancerIP: 34.170.165.32
  selector:
    app: apollo
  ports:
  - name: https-redmine
    port: 3443
    targetPort: 3443
  - name: http-calibre
    port: 8083
    targetPort: 8083
