apollo/apollo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apollo-services
spec:
  selector:
    app: apollo
  ports:
  - name: http-redmine
    port: 3000
    targetPort: 3000
  - name: http-calibre-web
    port: 8083
    targetPort: 8083
  - name: mysql
    port: 3306
    targetPort: 3306

---

apiVersion: v1
kind: Service
metadata:
  name: apollo-nodeport
spec:
  type: NodePort
  selector:
    app: apollo
  ports:
  - name: redmine
    port: 3000
    targetPort: 3000
  - name: calibre-web
    port: 8083
    targetPort: 8083
