apollo/apollo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apollo-ingress 
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  rules:
  
  - host: apollo.olympus.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name : apollo-nodeport
            port :
              name: https-redmine

  - host: apollo.olympus.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name : apollo-nodeport
            port :
              name: https-calibre
